loki/grafana-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
    #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  #ingressClassName: nginx
  rules:
  - host: grafana.test
    http:
      paths:
      - backend:
          service:
            name: loki-grafana
            port:
              number: 80
        path: /
        pathType: Prefix
